--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+#Settings files that may contain sensitive information
+appsettings.json
+
 # User-specific files
 *.rsuser
 *.suo
