--- a/.github/workflows/APIdeploy.yml
+++ b/.github/workflows/APIdeploy.yml
@@ -25,7 +25,7 @@ jobs:
       run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
     - name: Build API image
       run: | 
-        docker build --platform linux --tag aminespinoza/vecinosapi:latest -f AppVecinos.API/Dockerfile .
+        docker build --platform linux --tag aminespinoza/vecinosapi:${{ env.VERSION }} -f AppVecinos.API/Dockerfile .
     - name: Publish API image to Docker Hub
       run: |
-        docker push aminespinoza/vecinosapi:latest
+        docker push aminespinoza/vecinosapi:${{ env.VERSION }}
