--- a/.github/workflows/APIdeploy.yml
+++ b/.github/workflows/APIdeploy.yml
@@ -2,11 +2,11 @@ name: Deploy Vecinos API
 
 on:
   push:
-    branches: [ "main" ]
-    paths:
-      - 'AppVecinos.API/**'
+    branches: [ "amin-patch2" ]
+#    paths:
+#      - 'AppVecinos.API/**'
     tags:
-    - 'v*.*.*'
+      - 'v*'
     
 jobs:
   build:
@@ -15,17 +15,32 @@ jobs:
     steps:
     - name: Check out the repo
       uses: actions/checkout@v3 
+      
+    - name: Extract Metadata
+      uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: |
+          ${{secrets.DOCKERHUB_USERNAME}}/vecinosapi
+        tags: |
+          type=semver,pattern={{version}}
+          
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Extract version from tag
-      id: vars
-      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-    - name: Build API image
-      run: | 
-        docker build --platform linux --tag aminespinoza/vecinosapi:${{ env.VERSION }} -f AppVecinos.API/Dockerfile .
-    - name: Publish API image to Docker Hub
-      run: |
-        docker push aminespinoza/vecinosapi:${{ env.VERSION }}
+
+    - name: Build And Push
+      uses: docker/build-push-action@v5
+      with:
+        context: AppVecinos.API/Dockerfile .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        
+#    - name: Build API image
+#      run: | 
+#        docker build --platform linux --tag aminespinoza/vecinosapi:${{ env.VERSION }} -f AppVecinos.API/Dockerfile .
+#    - name: Publish API image to Docker Hub
+#      run: |
+#        docker push aminespinoza/vecinosapi:${{ env.VERSION }}
