--- a/AppVecinos.API/Dockerfile
+++ b/AppVecinos.API/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
-COPY ./AppVecinos.API.csproj .
+COPY AppVecinos.API.csproj .
 RUN dotnet restore
 COPY . .
 
