--- a/AppVecinos.API/Dockerfile
+++ b/AppVecinos.API/Dockerfile
@@ -1,7 +1,13 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
+
+RUN ls -a
+
 COPY AppVecinos.API.csproj .
+
+RUN ls -a
+
 RUN dotnet restore
 COPY . .
 
