--- a/AppVecinos.API/Dockerfile
+++ b/AppVecinos.API/Dockerfile
@@ -1,13 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
-WORKDIR /src
-
-RUN ls -a
-
+WORKDIR /AppVecinos.API/
 COPY AppVecinos.API.csproj .
-
-RUN ls -a
-
 RUN dotnet restore
 COPY . .
 
