--- a/.github/workflows/APIdeploy.yml
+++ b/.github/workflows/APIdeploy.yml
@@ -10,6 +10,9 @@ jobs:
   build:
     name: Docker build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: AppVecinos.API/
     steps:
     - name: Check out the repo
       uses: actions/checkout@v3  
@@ -22,7 +25,7 @@ jobs:
         
     - name: Build API image
       run: | 
-        docker build --platform linux --tag aminespinoza/vecinosapi:latest -f AppVecinos.API/Dockerfile .
+        docker build --platform linux --tag aminespinoza/vecinosapi:latest .
     - name: Publish API image to Docker Hub
       run: |
         docker push aminespinoza/vecinosapi:${{ env.VERSION }}
