--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ appsettings.json
 *.user
 *.userosscache
 *.sln.docstates
+*.sln
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
