--- a/.github/workflows/APIdeploy.yml
+++ b/.github/workflows/APIdeploy.yml
@@ -8,7 +8,7 @@ on:
 
 env: 
   SERVICE_NAME: neighborapi
-  RESOURCE_GROUP_NAME: dev-vecinos-rg
+  RESOURCE_GROUP_NAME: dev-commUnity-rg
   IMAGE_NAME: marcelamq/vecinosapi
     
 jobs:
@@ -47,4 +47,4 @@ jobs:
 
     - name: Deploy API Container App
       run: |
-          az containerapp up --name "$SERVICE_NAME" --resource-group "$RESOURCE_GROUP_NAME" --environment dev-vecinos-env --image docker.io/"$IMAGE_NAME":latest 
+          az containerapp up --name "$SERVICE_NAME" --resource-group "$RESOURCE_GROUP_NAME" --environment dev-commUnity-env --image docker.io/"$IMAGE_NAME":latest 
