Balances microservice created

--- a/.gitignore
+++ b/.gitignore
@@ -185,13 +185,7 @@ DocProject/Help/html
 # Click-Once directory
 publish/
 
-# Publish Web Output
-*.[Pp]ublish.xml
-*.azurePubxml
-# Note: Comment the next line if you want to checkin your web deploy settings,
-# but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
-*.publishproj
+
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
 # checkin your Azure Web App publish settings, but sensitive information contained
@@ -378,9 +372,10 @@ ASALocalRun/
 # Local History for Visual Studio Code
 .history/
 
-# Terraform folders
-./.terraform/
-
-#Terraform variables files
+# Terraform forelated files
+.terraform/
+.terraform.lock.hcl
+.terraform.tfstate
 *.tfvars
+*.out
 
